fixed modal gap at bottom error

--- a/css/base.css
+++ b/css/base.css
@@ -9,7 +9,7 @@ body {
     font-family: "Noto Sans";/*, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;*/
     background: var(--bg);
     color: var(--text);
-    height: 100vh;
+    height: 100dvh;
     display: flex;
     flex-direction: column;
     overflow: hidden;
